Edited wiki page tutorial_basic_features through web user interface.

--- a/wiki/tutorial_basic_features.wiki
+++ b/wiki/tutorial_basic_features.wiki
@@ -8,7 +8,8 @@ Download the [http://ess-tracebug.googlecode.com/svn/trunk/test.R `test.R`] file
 one function, `lm_test`, with an erroneous "," at line 6.
 
 Open `test.R` file and press M-c s (or just source it explicitly with source("test.R")), you should get an error
-"unexpected ','"  with the reference to the error position highlighted:
+`unexpected ','`  with the reference to the error position highlighted:
+
 http://ess-tracebug.googlecode.com/svn/trunk/img/tut1_comma_error.png
 
 With M-] from test.R (`next-error`) or from iESS buffer (`next-error-no-select`) you can jump directly to the error
@@ -18,15 +19,6 @@ correspondingly.  Mouse-click on the highlighted reference in the process buffer
 The above navigation functionality is based on next-error and
 next-error-no-select capabilities which you get in compilation, grep
 and occur modes, and should be familiar to many of ESS users.
-
-== The Traceback Buffer ==
-
-After an error occurred, press `M-c '` (back-tick) to open the `*ess-traceback*` buffer:
-http://ess-tracebug.googlecode.com/svn/trunk/img/tut3_traceback.png
-
-It displays the complete call stack and the most recent error with the references to the source file positions highlighted.
-
-With the suggested default configuration `n` and `p` navigate through the call-stack source positions without selecting the source buffer. Press `RET` to go to the source or `q` to quit.
 
 
 == The Debugging ==
@@ -43,8 +35,10 @@ lm_test(Fertility ~ . , data = swiss)
 
 Execute the above code interactively.
 
-You should be brought to the break-point in the test.R; fringe should display the small triangle and the current
-line should be highlighted: http://ess-tracebug.googlecode.com/svn/trunk/img/tut1_comma_error.png
+You should be brought to the break-point in the `test.R` file. Fringe must display a small triangle and the current
+line must be highlighted: 
+
+http://ess-tracebug.googlecode.com/svn/trunk/img/tut2_break_point.png
 
 Immediately after entering the interactive debugging  start pressing n,n,n... to jump through you code. This is
 the easy-key-mode in which n,q,c do what usually n,Q,c do in R buffer. Any other event
@@ -55,6 +49,16 @@ into easy mode.
 
 Easy-key-mode is entered automatically whenever the debugger starts from a non-iESS buffer. In iESS it is often
 desirable to have the default behavior.
+
+== The Traceback Buffer ==
+
+After an error occurred, press `M-c '` (back-tick) to open the `*ess-traceback*` buffer:
+
+http://ess-tracebug.googlecode.com/svn/trunk/img/tut3_traceback.png
+
+It displays the complete call stack and the most recent error with the references to the source file positions highlighted.
+
+With the suggested default configuration, `n` and `p` navigate through the call-stack source positions without selecting the source buffer. Press `RET` to go to the source or `q` to quit.
 
 == The Work-Flow ==
 
@@ -70,3 +74,4 @@ When you execute M-c i the current position is  inserted into the
 `ess-debug-ring`. Usually it is the place when you correct the error. So it's a focal
 point in the source code. You can jump through the debug-ring with M-c d d d D D
 d....
+
