Edited wiki page tutorial_basic_features through web user interface.

--- a/wiki/tutorial_basic_features.wiki
+++ b/wiki/tutorial_basic_features.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 <wiki:toc max_depth="3" />
 
 In what follows it is assumed that the key bindings and the configuration are as suggested on the [http://code.google.com/p/ess-tracebug/ main page] and the `ess-traceback` and `ess-debug` modes are turned on.
