--- a/trunk/todo.org
+++ b/trunk/todo.org
@@ -11,3 +11,4 @@
 * DONE Make go to last input functionality a ring
   CLOSED: [2010-11-11 Thu 13:54]
 * TODO popup the R buffer on  _errors_ and/or on _debug at_
+* TODO make ess-eval-region2 and remove advising
