--- a/trunk/todo.org
+++ b/trunk/todo.org
@@ -12,3 +12,5 @@
   CLOSED: [2010-11-11 Thu 13:54]
 * TODO popup the R buffer on  _errors_ and/or on _debug at_
 * TODO make ess-eval-region2 and remove advising
+* TODO make running prompt and remove useless Finished evaluation message as
+  suggested here https://stat.ethz.ch/pipermail/ess-help/2011-May/006893.html
