--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -16,10 +16,8 @@ Open `test.R`  and press M-c s (or just source it explicitly with `source("test.
 
 <img src="http://ess-tracebug.googlecode.com/svn/trunk/img/tut1_comma_error.png" width=500 >
 
-If you configured your keys as indicated in the [http://code.google.com/p/ess-tracebug/#Navigation navigation]
-section, with "M-]" from test.R (`next-error`) or from iESS buffer (`next-error-no-select`) you can jump directly to
-the error location and the error position will be highlighted for `next-error-highlight` or `next-error-no-select`
-seconds correspondingly.  Mouse-click on the highlighted reference in the process buffer will also do the job.
+Now you can jump directly to
+the error location with default emacs keys "C-x `" or "M-g n". The error position is highlighted for `next-error-highlight` seconds. Mouse-click on the highlighted reference in the process buffer will also do the job.
 
 The above navigation functionality is based on next-error and
 next-error-no-select capabilities which you get in compilation, grep
